# instantConfig

./: LICENSE  README  README.md  TODO  instantConfig.h
loaders/: README.md
loaders/jsoncons/: jsoncons_icfg_loader.h
loaders/jsoncpp/: jsoncpp_icfg_loader.h
tests/: CMakeLists.txt  CompilerOutputTest.h  CompilerOutputTest_unix.cpp  CompilerOutputTest_win.cpp  GenerateTestProject.cmake  ProjectSetup.h.IN  build_test_runner.cpp  compile_test_suite.cpp
tests/static/: A1_Canonical.cpp  B1_ConfigAllowedParameters.cpp  B2_ConfigDisallowedParameterName.cpp  B3_ConfigDisallowedParameterType.cpp  B4_ConfigDisallowedParameterCaseOf.cpp  B5_ConfigDisallowedParameterLengthConstraint.cpp  C1_SectionAllowedParameters.cpp  C2_SectionRequiredParameterName.cpp  C3_SectionUniqueParameterName.cpp  C4_SectionDisallowedParameterCaseOf.cpp  C5_SectionDisallowedParameterType.cpp  C6_SectionDisallowedParameterLengthConstraint.cpp  CMakeLists.txt  D10_SettingDisallowedParameterSection.cpp  D11_SettingDisallowedParameterSwitchOn.cpp  D12_SettingDisallowedParameterInclude.cpp  D13_SettingDisallowedParameterSetting.cpp  D1_SettingAllowedParameters.cpp  D2_SettingRequiredParameterName.cpp  D3_SettingUniqueParameterName.cpp  D4_SettingRequiredParameterType.cpp  D5_SettingUniqueParameterType.cpp  D6_SettingDisallowedParameterCaseOf.cpp  D7_SettingAllowedParameterLengthConstraintForString.cpp  D8_SettingAllowedParameterLengthConstraintForList.cpp  D9_SettingDisallowedParameterLengthConstraintNumber.cpp  E10_switchOnDisallowedParameterLengthConstraint.cpp  E11_switchOnFirstParameterName.cpp  E1_switchOnAllowedParameters.cpp  E2_switchOnRequiredParameterName.cpp  E3_switchOnUniqueParameterName.cpp  E4_switchOnDisallowedParameterType.cpp  E5_switchOnDisallowedParameterConfig.cpp  E6_switchOnDisallowedParameterSection.cpp  E7_switchOnDisallowedParameterSetting.cpp  E8_switchOnDisallowedParameterSwitchOn.cpp  E9_switchOnDisallowedParameterMap.cpp  F1_caseOfAllowedParameters.cpp  F2_caseOfRequiredParameterName.cpp  F3_caseOfUniqueParameterName.cpp  (+8 more)
